--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -19,6 +19,14 @@ $red: #ff1755;
       transition: $e;
 }
 
+@mixin flexbox() {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
 // fonts
 
 body {
