--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -46,15 +46,27 @@ header {
 }
 
 // Portfolio
+.portfolio {
+  text-align: center;
+  .projects {
+    @include flexbox();
+	  flex-wrap: wrap;
+  }
+}
 .project {
   border: 2px solid $black;
   padding: 10px;
+  margin: 10px;
+  text-align: center;
+  flex: 1 0 40%;
+  box-sizing: border-box;
   img {
-    height: 240px;
-    margin-right: 10px;
-    float: left;
+    width: 100%;
   }
-  p{
-    float: left;
+}
+
+@media (max-width: 768px) {
+  .project {
+    flex: 1 100%;
   }
 }
