--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -58,13 +58,20 @@ header {
     position: absolute;
     top: 7em;
     left: 1em;
+    opacity: 1;
   }
   p {
-    padding: 1.5em;
+    width: 94%;
+    height: 94%;
+    padding: 1em;
     position: absolute;
-    top: 1em;
+    margin-right: auto;
+    margin-left: auto;
+    left: 0;
+    right: 0;
+    top: 3%;
     color: $white;
-    display: none;
+    opacity: 0;
   }
   img {
     width: 100%;
@@ -72,9 +79,13 @@ header {
 }
 
 .project:hover > h2 {
-  display: none;
+  opacity: 0;
+  @include transition( opacity .5s ease-in-out);
 }
 
 .project:hover > p {
   display: block;
+  opacity: 1;
+  background-color: rgba(0,0,0,0.4);
+  @include transition( opacity .5s ease-in-out);
 }
