--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -45,51 +45,78 @@ header {
 
 }
 
+h1 {
+  display: block;
+  width: 100;
+}
+
+
 // Portfolio
 .portfolio {
   text-align: center;
 }
+
+.projects {
+  @include flexbox();
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+}
+
 .project {
-  padding: 10px;
-  position: relative;
-  .title{
-    font-size: 2rem;
-    color: $white;
-    font-style: italic;
-    position: absolute;
-    z-index: 1;
-    top: 7em;
-    left: 1em;
-    opacity: 1;
-    @include transition(.4s ease-in-out);
-    cursor: pointer;
+  @include flexbox();
+  padding: 0;
+  background-size: cover;
+  background-position: center;
+  min-height: 300px;
+  width: 100%;
+  margin-bottom: 1rem;
+  .overlay {
+    padding: 10px;
+    height: 100%;
+    width: 100%;
     &:hover {
-      color: $red;
-      @include transition(.4s ease-in-out);
+      background-color: rgba(0,0,0, 0.5);
+    }
+    .title{
+      font-size: 2rem;
+      color: $white;
+      font-style: italic;
+    }
+    p {
+      padding: 1em;
+      margin-right: auto;
+      margin-left: auto;
+      color: $white;
+      opacity: 0;
+      z-index: 1;
     }
   }
-  p {
-    width: 94%;
-    height: 94%;
-    padding: 1em;
-    position: absolute;
-    margin-right: auto;
-    margin-left: auto;
-    left: 0;
-    right: 0;
-    top: 3%;
-    color: $white;
-    opacity: 0;
-  }
-  img {
-    width: 100%;
-  }
+
 }
 
 
-.project:hover > p {
+.overlay:hover > p {
   display: block;
   opacity: 1;
-  background-color: rgba(0,0,0,0.4);
   @include transition( opacity .4s ease-in-out);
+}
+
+@media (min-width: 768px) {
+  .project {
+
+  }
+}
+
+@media (min-width: 768px) {
+  .project {
+    width: 49%;
+  }
+}
+
+@media (min-width: 1196px) {
+  .project {
+    width: 32%;
+  }
 }
