main banner alignment and response"

--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -34,7 +34,7 @@ $red: #ff1755;
 // fonts
 
 body {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Inconsolata', monospace;
   font-size: 18px;
   color: $black;
   font-weight: 400;
