--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -8,8 +8,7 @@ header {
   position: fixed;
   display: block;
   width: 100%;
-  background-color: $black;
-  opacity: .6;
+  background-color: rgba(0,0,0,.6);
   color: $white;
   height: 60px;
 }
@@ -68,20 +67,24 @@ h1 {
   flex-direction: column;
   .banner {
     margin: auto;
+    padding-top: 2.5rem;
     border: 4px double;
     height: 18rem;
     width: 28rem;
     color: $white;
-    @include flexbox();
-    justify-content: center;
-    align-items: center;
     .name {
       font-weight: normal;
-      padding-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
     .title {
       font-weight: bold;
-      padding-bottom: 1.5rem;
+      margin-bottom: 1rem;
+    }
+    .location {
+      margin-bottom: 4rem;
+    }
+    .email {
+      color: $white;
     }
   }
   .arrow {
