--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -77,6 +77,7 @@ h1 {
       margin-bottom: 1.5rem;
     }
     .title {
+      font-size: 20px;
       font-weight: bold;
       margin-bottom: 1rem;
     }
@@ -85,6 +86,7 @@ h1 {
     }
     .email {
       color: $white;
+      font-size: 10px;
     }
   }
   .arrow {
@@ -135,6 +137,7 @@ h1 {
       font-size: 2rem;
       color: $white;
       font-style: italic;
+      font-weight: bold;
       position: absolute;
       bottom: 12px;
       left: 5px;
@@ -178,7 +181,7 @@ h1 {
   }
 }
 
-@media (min-width: 990px) {
+@media (min-width: 1224px) {
   .project {
     width: 32%;
   }
