--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -13,9 +13,11 @@ header {
   background-color: $darkgrey;
   color: $white;
   height: 60px;
-  z-index: 1;
+  z-index: 10;
 }
   .logo {
+    font-size: 20px;
+    color: $white;
     position: absolute;
     top: 50%; left: 15px;
     @include translateY(-50%);
@@ -69,6 +71,8 @@ h1 {
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  position: relative;
+  z-index: 5;
   .banner {
     margin: auto;
     padding-top: 2.75rem;
@@ -131,6 +135,11 @@ h1 {
   min-height: 100vh;
   margin-top: -60px;
   padding-top: 60px;
+  background: url("../photos/whirlpool.png");
+  z-index: 1;
+  h1 {
+    padding: 1.5rem;
+  }
 }
 
 .projects {
