--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -4,6 +4,8 @@
 body {
   margin: 0;
 }
+
+
 // header
 
 header {
@@ -215,10 +217,29 @@ h1 {
   @include transition( opacity .4s ease-in-out);
 }
 
+// about
+#about  {
+  color: $white;
+  width: 100%;
+  padding: 2rem 5% 2rem 5%;
+  background-color: $darkblue;
+  h1 {
+    text-align: center;
+    margin: 0 auto 1.5rem auto;
+    padding-bottom: .5rem;
+    width: 25%;
+    border-bottom: solid 4px $white;
+    font-weight: bold;
+  }
+}
+
 // media queries
 @media (max-width: 480px) {
   .banner {
     max-width: 100%;
+  }
+  .email, .github {
+    border: none;
   }
 }
 
