--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -56,6 +56,8 @@ header {
 
 
 
+
+
 h1 {
   display: block;
   width: 100;
@@ -149,16 +151,19 @@ h1 {
   padding-top: 60px;
   z-index: 1;
   h1 {
-    display: block;
-    margin: 1.5rem 37.5% 2rem 37.5%;
+    display: inline-block;
+    margin: 1.5rem auto 2rem auto;
     padding-bottom: .5rem;
-    width: 25%;
+    width: 16rem;;
     border-bottom: solid 4px $black;
     font-weight: bold;
   }
 }
 
 .projects {
+    border-top: 8px solid $salmon;
+}
+.projects-container {
   width: 100%;
   padding-left: 5%;
   padding-right: 5%;
@@ -166,7 +171,6 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  border-top: 8px solid $salmon;
 }
 
 .project {
@@ -227,11 +231,46 @@ h1 {
     text-align: center;
     margin: 0 auto 1.5rem auto;
     padding-bottom: .5rem;
-    width: 25%;
+    width: 16rem;
     border-bottom: solid 4px $white;
     font-weight: bold;
   }
 }
+
+// footer
+footer {
+width: 100%;
+background-color: $darkgrey;
+color: $white;
+text-align: center;
+padding: 1rem;
+display: block;
+.connect {
+  font-size: 1.5rem;
+  margin: auto;
+  margin-bottom: 1rem;
+  width: 12rem;
+  padding-bottom: .25rem;
+  border-bottom: 1px solid $white;
+}
+  ul {
+    margin: auto;
+    text-align: center;
+    padding: 0;
+    li:first-child {
+    padding-left: 0;
+    }
+    li {
+    list-style-type: none;
+    display: inline-block;
+    padding-left: .5rem;
+      a img {
+        height: 2rem;
+      }
+    }
+  }
+}
+
 
 // media queries
 @media (max-width: 480px) {
