logo, header style

--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -6,11 +6,16 @@
 $black: #010000;
 $white: #ffffff;
 $lightgrey: #e6e6e6;
-$darkgrey: #333;
+$darkgrey: #5A5A5A;
+$grey: #6C6B6B;
 $red: #ff1755;
 $salmon: #FF7C6D;
 $darkblue: #014289;
 $lavblue: #637AFF;
+$darkgreen: #393F36;
+
+$bar-color: $darkgrey;
+$hover: #FF7C6D;
 
 // mixins
 
