--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -163,12 +163,12 @@ h1 {
   margin-top: -45px;
   padding-top: 45px;
   z-index: 1;
+  background-color: $lightgrey;
   h1 {
     display: inline-block;
     margin: 1.5rem auto 2rem auto;
     padding-bottom: .5rem;
     width: 16rem;;
-    border-bottom: solid 4px $black;
     font-weight: bold;
   }
 }
@@ -176,6 +176,7 @@ h1 {
 .projects {
     border-top: 8px solid $salmon;
 }
+
 .projects-container {
   width: 100%;
   padding-left: 5%;
@@ -183,7 +184,7 @@ h1 {
   @include flexbox();
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .project {
@@ -193,8 +194,11 @@ h1 {
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
+  height: auto;
   min-height: 300px;
   margin-bottom: 1rem;
+  border: 1px solid $black;
+  border-radius: 1px;
   .overlay {
     padding: 10px;
     height: 100%;
@@ -206,14 +210,14 @@ h1 {
     }
     .title{
       font-size: 2rem;
-      color: $white;
-      font-style: italic;
+      color: $black;
       font-weight: bold;
       position: absolute;
-      bottom: 12px;
-      left: 5px;
-      background-color: rgba(0,0,0,.2);
-      padding: 0 1em 0 1em;
+      bottom: 0;
+      left: 0;
+      background-color: $white;
+      width: 100%;
+      padding: .5rem 0 .5rem 0;
     }
     p {
       padding: 1em;
@@ -225,6 +229,14 @@ h1 {
     }
   }
 
+}
+
+#skills {
+  margin-top: 1rem;
+  p {
+    margin-bottom: 0;
+    padding-bottom: 1rem;
+  }
 }
 
 
@@ -245,7 +257,6 @@ h1 {
     margin: 0 auto 1.5rem auto;
     padding-bottom: .5rem;
     width: 16rem;
-    border-bottom: solid 4px $white;
     font-weight: bold;
   }
 }
@@ -295,17 +306,22 @@ display: block;
   }
 }
 
-
-
-
-@media (min-width: 768px) {
+@media (max-width: 980px) {
   .project {
-    width: 49%;
+    min-height: 350px;
+  }
+}
+
+
+@media (min-width: 980px) {
+  .project {
+    width: 46%;
   }
 }
 
 @media (min-width: 1224px) {
   .project {
-    width: 32%;
+    width: 30%;
+
   }
 }
