component styles organized into scss modules

--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -1,298 +1,14 @@
 @import "_config.scss";
 
+@import "modules/about";
+@import "modules/home";
+@import "modules/portfolio";
+@import "modules/header";
+@import "modules/footer";
+
 // general
 body {
   margin: 0;
-}
-
-
-// header
-
-header {
-  position: fixed;
-  display: block;
-  width: 100%;
-  background-color: $bar-color;
-  color: $white;
-  height: 45px;
-  z-index: 10;
-}
-  .logo {
-    font-size: 20px;
-    padding-top: .5rem;
-    color: $white;
-    position: absolute;
-    top: 50%; left: 15px;
-    @include translateY(-50%);
-  }
-
-  #icon polyline {
-    stroke: $white;
-  }
-
-  #icon:hover > polyline {
-    stroke: $hover;
-    @include transition(.4s ease-in-out);
-  }
-
-  nav,
-  nav ul,
-  nav ul li {
-    margin: 0;
-    padding: 0;
-  }
-
-  nav {
-    position: absolute;
-    top: 50%; right: 15px;
-    @include translateY(-50%);
-
-    ul {
-        padding-right: 1rem;
-      li {
-        list-style-type: none;
-        display: inline-block;
-        margin-right: 10px;
-
-        &.last {
-          margin: 0;
-        }
-
-        a {
-          font-size: 19px;
-          line-height: normal;
-          color: $white;
-        }
-      }
-    }
-  }
-
-
-
-
-
-h1 {
-  display: block;
-  width: 100;
-}
-
-// home
-.home-content {
-  background: url("../photos/martin-sattler.jpg");
-  background-size: cover;
-  background-position: center;
-  text-align: center;
-  width: 100%;
-  min-height: 100vh;
-  @include flexbox();
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-  z-index: 5;
-  .banner {
-    margin: auto;
-    padding-top: 2.75rem;
-    border: 4px double;
-    height: 18rem;
-    width: 28rem;
-    color: $white;
-    .name {
-      font-weight: normal;
-      margin-bottom: 1.5rem;
-    }
-    .title {
-      font-size: 1.25rem;
-      font-weight: bold;
-      margin-bottom: 1.5rem;
-    }
-    .location {
-      margin-bottom: 2rem;
-    }
-    .links {
-      color: $white;
-      width: 100%;
-      height: 32px;
-      margin: auto;
-      margin-bottom: 1rem;
-      @include flexbox();
-      flex-flow: row wrap;
-      justify-content: center;
-      align-items: center;
-      a {
-        color: $white;
-        font-size: 1rem;
-        padding: 0 1rem 0 1rem;
-        &:hover {
-          color: $salmon;
-          @include transition(.4s ease-in-out);
-        }
-      }
-      .email {
-        border-right: 1px solid $white;
-      }
-      .github {
-        border-left: 1px solid $white;
-      }
-    }
-
-  }
-  .arrow {
-    width: 20px;
-    height: 20px;
-    border: solid $white;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    margin-bottom: 2rem;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    &:hover {
-      border-color:$salmon;
-      border-width: 0 4px 4px 0;
-      @include transition(.4s ease-in-out);
-    }
-  }
-}
-
-
-// Portfolio
-.portfolio {
-  text-align: center;
-  min-height: 100vh;
-  margin-top: -45px;
-  padding-top: 45px;
-  z-index: 1;
-  background-color: $lightgrey;
-  h1 {
-    display: inline-block;
-    margin: 1.5rem auto 2rem auto;
-    padding-bottom: .5rem;
-    width: 16rem;;
-    font-weight: bold;
-  }
-}
-
-.projects {
-    border-top: 8px solid $salmon;
-}
-
-.projects-container {
-  width: 100%;
-  padding-left: 5%;
-  padding-right: 5%;
-  @include flexbox();
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.project {
-  @include flexbox();
-  padding: 0;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 100%;
-  height: auto;
-  min-height: 300px;
-  margin-bottom: 1rem;
-  border: 1px solid $black;
-  border-radius: 1px;
-  .overlay {
-    padding: 10px;
-    height: 100%;
-    width: 100%;
-    position: relative;
-    &:hover {
-      background-color: rgba(0,0,0, 0.5);
-      text-decoration: none;
-    }
-    .title{
-      font-size: 2rem;
-      color: $black;
-      font-weight: bold;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background-color: $white;
-      width: 100%;
-      padding: .5rem 0 .5rem 0;
-    }
-    p {
-      padding: 1em;
-      margin-right: auto;
-      margin-left: auto;
-      color: $white;
-      opacity: 0;
-      z-index: 1;
-    }
-  }
-
-}
-
-#skills {
-  margin-top: 1rem;
-  p {
-    margin-bottom: 0;
-    padding-bottom: 1rem;
-  }
-}
-
-
-.overlay:hover > p {
-  display: block;
-  opacity: 1;
-  @include transition( opacity .4s ease-in-out);
-}
-
-// about
-#about  {
-  color: $white;
-  width: 100%;
-  padding: 2rem 5% 2rem 5%;
-  background-color: $darkblue;
-  h1 {
-    text-align: center;
-    margin: 0 auto 1.5rem auto;
-    padding-bottom: .5rem;
-    width: 16rem;
-    font-weight: bold;
-  }
-}
-
-// footer
-footer {
-width: 100%;
-background-color: $bar-color;
-color: $white;
-text-align: center;
-padding: 1rem;
-display: block;
-.connect {
-  font-size: 1.5rem;
-  margin: auto;
-  margin-bottom: 1rem;
-  width: 12rem;
-  padding-bottom: .25rem;
-  border-bottom: 1px solid $white;
-}
-  ul {
-    margin: auto;
-    text-align: center;
-    padding: 0;
-    li:first-child {
-    padding-left: 0;
-    }
-    li {
-    list-style-type: none;
-    display: inline-block;
-    padding-left: .5rem;
-      a img {
-        height: 2rem;
-      }
-    }
-  }
 }
 
 
