--- a/src/assets/scss/modules/_portfolio.scss
+++ b/src/assets/scss/modules/_portfolio.scss
@@ -39,12 +39,13 @@
   min-height: 300px;
   margin-bottom: 1rem;
   border: 1px solid $black;
-  border-radius: 1px;
+  border-radius: 5px;
   .overlay {
     padding: 10px;
     height: 100%;
     width: 100%;
     position: relative;
+    border-radius: 5px;
     &:hover {
       background-color: rgba(0,0,0, 0.5);
       text-decoration: none;
@@ -54,11 +55,12 @@
       color: $black;
       font-weight: bold;
       position: absolute;
-      bottom: 0;
+      bottom: -8px;
       left: 0;
       background-color: $white;
       width: 100%;
       padding: .5rem 0 .5rem 0;
+      border-radius: 0 0 5px 5px;
     }
     p {
       padding: 1em;
