--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -5,7 +5,7 @@
 // vars
 $black: #010000;
 $white: #ffffff;
-$lightgrey: #e6e6e6;
+$lightgrey: #ececec;
 $darkgrey: #5A5A5A;
 $grey: #6C6B6B;
 $red: #ff1755;
