--- a/src/assets/scss/modules/_portfolio.scss
+++ b/src/assets/scss/modules/_portfolio.scss
@@ -4,18 +4,20 @@
   margin-top: -45px;
   padding-top: 45px;
   z-index: 1;
-  background-color: $lightgrey;
+  background-color: $white;
   h1 {
     display: inline-block;
     margin: 1.5rem auto 2rem auto;
     padding-bottom: .5rem;
     width: 16rem;;
     font-weight: bold;
+    color: $white;
+    text-shadow: 2px 2px 4px #000000;
   }
 }
 
 .projects {
-    border-top: 8px solid $salmon;
+    border-top: 3px solid $salmon;
 }
 
 .projects-container {
@@ -38,29 +40,29 @@
   height: auto;
   min-height: 300px;
   margin-bottom: 1rem;
-  border: 1px solid $black;
-  border-radius: 5px;
+  border-radius: 2px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   .overlay {
     padding: 10px;
     height: 100%;
     width: 100%;
     position: relative;
-    border-radius: 5px;
+    border-radius: 2px;
     &:hover {
       background-color: rgba(0,0,0, 0.5);
       text-decoration: none;
     }
     .title{
       font-size: 2rem;
-      color: $black;
+      color: $white;
       font-weight: bold;
       position: absolute;
       bottom: -8px;
       left: 0;
-      background-color: $white;
+      background-color: rgba(0,0,0, 0.3);
       width: 100%;
       padding: .5rem 0 .5rem 0;
-      border-radius: 0 0 5px 5px;
+      border-radius: 0 0 2px 2px;
     }
     p {
       padding: 1em;
