--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -17,6 +17,8 @@ $darkgreen: #393F36;
 $bar-color: $darkgrey;
 $hover: #FF7C6D;
 
+$textShadow: 2px 2px 4px #000000;
+
 // mixins
 
 @mixin translateY($e) {
