--- a/src/assets/scss/modules/_portfolio.scss
+++ b/src/assets/scss/modules/_portfolio.scss
@@ -12,7 +12,7 @@
     width: 16rem;;
     font-weight: bold;
     color: $white;
-    text-shadow: 2px 2px 4px #000000;
+    text-shadow: $textShadow;
   }
 }
 
@@ -36,9 +36,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  width: 100%;
-  height: auto;
-  min-height: 300px;
+  width: 85%;
+  height: 250px;
   margin-bottom: 1rem;
   border-radius: 2px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -59,9 +58,9 @@
       position: absolute;
       bottom: -8px;
       left: 0;
-      background-color: rgba(0,0,0, 0.3);
       width: 100%;
       padding: .5rem 0 .5rem 0;
+      text-shadow: $textShadow;
       border-radius: 0 0 2px 2px;
     }
     p {
